[package]
name = "aritstStreams"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
gstreamer = "0.22"
gstreamer-video = "0.22"
anyhow = "1.0.101"
axum = "0.8.8"
routes = "0.1.0"
hyper = "0.14"
